# jk

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  clice.toml  vcpkg.json  xmake.lua
buildsystem/: jkConfig.cmake.in
include/jk/: jk.cppm
include/jk/meta/: callables.h  compiler.h  type-list.h  type-var.h
include/jk/wrap/: location.h  string.h
tests/: CMakeLists.txt  callables.cpp  location.cpp  module.cpp  string.cpp  type-list.cpp  type-var.cpp  xmake.lua
